# OS_course

./: .gitignore  CMakeLists.txt  hw1_script.sh  hw1_subs  hw1_subs.c
hw1/: CMakeLists.txt  hw1.txt  hw1_subs.c
hw2/: compile_statment  dup_exp.c  echo_string  echo_string.c  echo_string_all_len  echo_string_all_len.c  echo_string_all_len_once  echo_string_all_len_once.c  echo_string_sleep  echo_string_sleep.c  myshell  myshell.c  myshell_main.c  print_args.py  print_stdin.py  read_stdin  read_stdin.c  scores  wait_minute  wait_minute.c
hw3/message_slot/: message_reader.c  message_sender.c  message_slot.c  message_slot.h  simple_user.c  simple_user_test.c
hw3/rec_char_dev/: chardev.c  user_write_and_read.c
hw4/: ex4.c  ex4_one_thread  hw4.c  hw4_one_thread.c
hw4/files/: input_1.txt  input_2.txt  input_3.txt  input_python_1.txt  input_python_2.txt  output_file.txt
hw4/r07_threads/: pthread_ex1.c  pthread_ex2.c  pthread_ex3.c
hw4/r08_mutex/: cond_var_ex1.c  mutex_ex1.c  mutex_ex2.c  mutex_ex3.c
hw5/: function_checks.c  pcc_client  pcc_client.c  pcc_client.h  pcc_server  pcc_server.c  pcc_server.h
